--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
-<!--           <li class="navbar-item">
+          <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
 	   <li class="navbar-item">
               <button class="navbar-link" data-nav-link>Research</button>
-          </li> -->
+          </li>
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Contact</button>
