--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         - #PORTFOLIO
       -->
 
-      <article class="portfolio" data-page="portfolio">
+     <article class="portfolio" data-page="portfolio">
 
         <header>
           <h2 class="h2 article-title">Portfolio</h2>
@@ -520,7 +520,11 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Machine Learning</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Natural Language Processing</button>
 
             </li>
 
@@ -549,7 +553,11 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Machine Learning</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Natural Language Processing</button>
               </li>
 
               <li class="select-item">
@@ -584,7 +592,7 @@ enhancing user experiences have played a pivotalrole in furthering ARDO NGO's mi
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://github.com/saritkumarhota/cms">
+              <a href="https://github.com/GUMMADIDALA-DILEEPCHANDU/cms">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -608,8 +616,8 @@ of colleges and universities.</p>
 
 
 
-            <li class="project-item  active" data-filter-item data-category="Web design">
-              <a href="https://github.com/saritkumarhota/Diabets_Prediction">
+            <li class="project-item  active" data-filter-item data-category="machine learning">
+              <a href="https://github.com/GUMMADIDALA-DILEEPCHANDU/Diabets_Prediction">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -626,8 +634,8 @@ of colleges and universities.</p>
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Web design">
-              <a href="https://github.com/saritkumarhota/Emotion_classifier">
+            <li class="project-item  active" data-filter-item data-category="natural language processing">
+              <a href="https://github.com/GUMMADIDALA-DILEEPCHANDU/Emotion_classifier">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -660,7 +668,7 @@ Skilled in NLP-based emotion classification, adept at training models to analyze
         - #BLOG
       -->
 
-	 <article class="research" data-page="research">
+      <article class="research" data-page="research">
 
         <header>
           <h2 class="h2 article-title">Reserch</h2>
@@ -671,7 +679,7 @@ Skilled in NLP-based emotion classification, adept at training models to analyze
           <ul class="blog-posts-list">
 
             <li class="blog-post-item">
-              <a href="https://github.com/saritkumarhota/brain-tumor">
+              <a href="https://github.com/GUMMADIDALA-DILEEPCHANDU/brain-tumor">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/brain.jpg" alt="Best fonts every designer" loading="lazy">
@@ -702,7 +710,7 @@ Skilled in NLP-based emotion classification, adept at training models to analyze
             </li>
 
             <li class="blog-post-item">
-              <a href="https://github.com/saritkumarhota/Business-Model-of-byjus">
+              <a href="https://github.com/GUMMADIDALA-DILEEPCHANDU/Business-Model-of-byjus">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/Success-Factors-of-BYJUs.png" alt="Design digest #80" loading="lazy">
@@ -722,12 +730,12 @@ Skilled in NLP-based emotion classification, adept at training models to analyze
 
                   <p class="blog-text">
                     The performance evaluation of BYJU’s is dispensed through BTL and ATL marketing analysis and understanding of the working principle toward the consumer and target audience.
-
+					
 
                   </p>
 
                 </div>
-
+				
 
               </a>
             </li>
